# finance-data-admin-util

./: .env.example  .gitignore  CLAUDE.md  README.md
api/: main.py  pyproject.toml
api/app/: celery_client.py  config.py  config_assets.py
api/app/db/: __init__.py  analytics.py  base.py  economic.py  exchanges.py  markets.py  onchain.py  scraper.py  session.py  signals.py  social.py  users.py
api/app/dependencies/: auth.py
api/app/middleware/: logging.py
api/app/realtime/: __init__.py  auth.py  manager.py  models.py  poller.py  sse.py  ws.py
api/app/routers/: admin.py  analytics.py  auth.py  docker_logs.py  economic.py  markets.py  signals.py
api/app/services/: alpha.py  alpha_config.py  auth.py  live_prices_redis.py  openai_client.py
api/app/utils/: validation.py
api/tests/: conftest.py  test_admin_extended.py  test_alpha.py  test_alpha_config.py  test_analytics.py  test_auth.py  test_auth_service.py  test_config.py  test_config_assets.py  test_db_models.py  test_db_session.py  test_docker_logs.py  test_health.py  test_live_prices_redis.py  test_main.py  test_middleware_logging.py  test_normalization.py  test_openai_client.py  test_orderbook.py  test_pipeline_orchestrator.py  test_pipeline_runner.py  test_pipeline_stages.py  test_realtime_auth.py  test_realtime_manager.py  test_realtime_models.py  test_realtime_poller.py  test_realtime_sse.py  test_realtime_ws.py  test_routers_admin.py  test_routers_auth.py  test_routers_economic.py  test_routers_markets.py  test_routers_signals.py  test_validation.py
scraper/: pyproject.toml
scraper/fin_scraper/: celery_app.py  config.py  db.py
scraper/fin_scraper/clients/: binance_client.py  coingecko_client.py  etherscan_client.py  (+2 more)
scraper/tests/: conftest.py  test_analysis_tasks.py  test_celery_app.py  test_crypto_scraper.py  test_db.py  test_onchain_tasks.py  test_price_tasks.py  test_run_manager.py  test_signal_tasks.py  test_social_tasks.py  test_stock_scraper.py  test_sweep_tasks.py  test_synchronizer.py
(+84 files in other folders)
