[project]
name = "fin-data-api"
version = "0.1.0"
description = "Financial data admin API — stocks & crypto"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "tests/*",
]

[tool.coverage.report]
fail_under = 90
