[project]
name = "fin-data-scraper"
version = "0.1.0"
description = "Financial data ingestion — stocks & crypto"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.27.0",
    "yfinance>=0.2.36",
    "finnhub-python>=2.4.0",
    "fredapi>=0.5.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "structlog>=24.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
]
social = [
    "playwright>=1.47.0",
    "praw>=7.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "tests/*",
]

[tool.coverage.report]
fail_under = 80
